# Server_Local

./: README.md
tcpudp/: CMakeLists.txt
tcpudp/config/: client_config.json
tcpudp/include/: DataDecoder.hpp  DataStructures.hpp  TcpReceiver.hpp  UdpSender.hpp
tcpudp/src/: DataDecoder.cpp  DataStructure.cpp  TcpReceiver.cpp  UdpSender.cpp  main.cpp  txt
udptcp/: CMakeLists.txt
udptcp/config/: config.json
udptcp/include/: Bridge.hpp  MarketDataTypes.hpp  TcpServer.hpp  UdpReceiver.hpp
udptcp/src/: Bridge.cpp  TcpServer.cpp  UdpReciver.cpp  main.cpp
